2015-08-26
	Editor fixes:
	- now displays an i-beam/edit cursor
	- highlighting for numbers and keywords
	- F1 key for keywords surrounded by punctuation
	- page scrolling with up/down arrow keys
	- pressing tab at the bottom no longer jumps to the top

2015-08-02
	Fix display output before DELAY
	Fix LET command problem found in 32bit linux
	Removed obsolete/unimplemented keywords WSPLIT, PLOT2, UNLOADLIB

2015-07-18
	Added IDE editor sdl/android
	Made a few minor performance improvements (SDL)

2015-06-07
	Fixed PRINT 1/1000 and other floating point rounding issues
	Fixed problem with 59 char INPUT prompt
	Added missing PEN(12) support
	Added multi-item case selection (suggestion by James Grimaldi)
	SDL: Updated display of file anchor links
	SDL: Fix drag-drop from explorer to launch programs

2015-01-25
	Added timer func support
	Improved syntax error messages
	Remove dependence on malloc_usable_size
	Pass TRUE as an argument to PAUSE to wait for an event

2015-01-18
	Anti-aliased line drawing
	Improved INPUT with clipboard handling
	Improved graphics display performance

2014-12-03
	File-open now uses .bas DIR to locate files

2014-11-06
	Added WINDOW system object to control the ansiwidget
	Added sound support to SDL port

2014-10-28
	Update INKEY to return ALT, CTRL, ALT+CTRL key information

2014-10-20
	Refactor FORM handling to use system object

2014-09-28
	Refactor image handling to use system object

2014-09-22
	Implemented ARRAY command to read JSON into a map variable

2014-09-19
	Fix STR(v) support for map variables

2014-09-12
	Add support for unary operators on array elements
	Fix printing UDS vars

2014-09-08
	Fix call FUNC with (arg1), (arg2)
	Fix INKEY Backspace in FLTK
	Fix FOR/NEXT using float increments

2014-09-06
	RTE command renamed THROW

2014-09-01
	Added try/catch

2014-08-30
	Added reference variable type
	Fixed HASH var handling with parenthesis

2014-08-22
	Fix HASH var crash
	Fix HASH var handling of mixed types